--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
   --text: #9e9eba;
   --text-hover: #b2b2ed;
   --background: #121212;
+  --cta: #5D5DBF;
 
   font-family: "Amiko" ,system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -16,4 +17,15 @@
   background-color: var(--background);
 }
 
+button {
+  background-color: var(--cta);
+  color: whitesmoke;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
 
+button:hover{
+  background-color: var(--cta);
+  opacity: 0.94;
+  color: white;
+}
