--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,34 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'InconsolataSubset';
+  src: url('./assets/fonts/Inconsolata/Inconsolata-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
+@font-face {
+  font-family: 'InconsolataSubset';
+  src: url('./assets/fonts/Inconsolata/Inconsolata-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 :root {
 
-  --text: #bfbfd9;
-  --text-hover: #b2b2ed;
-  --link: #a5a5f8;
-  --link-hover: #9898e9;
+  --text: #ededed;
+  --text-hover: #d4d4d4;
+  --link: #d06694;
+  --link-hover: #e47ba8;
+  --secondary-text: #f2f2f4; 
   --background: #121212;
-  --cta: #5D5DBF;
-  --cta-hover: #4949a9;
-  --dark-purple: #2b2b81;
+  --cta: #c9215f;
+  --cta-hover: #d73973;
+  --dark-cta: #9c1949;
 
-  font-family: "Amiko" ,system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: 'Inconsolata', system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
 
   color: var(--text);
