feat: update countdown, screensize, play button focuses the screen on playscene

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,6 +26,7 @@
   --shine: #f9a8cb;
   --secondary-text: #f2f2f4; 
   --background: #121212;
+  --background-transparent: #121212aa;
   --cta: #c9215f;
   --cta-rgb: 201,33,95;
   --shadow-rgb: 55, 55, 55;
